--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,28 @@ body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
   overflow: hidden;
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
+html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+/* Ensure canvas takes full space */
+canvas {
+  display: block !important;
+  width: 100% !important;
+  height: 100% !important;
 }
 
 @keyframes loading-bar {
